--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://gemini.google.com/*"],
       "js": ["content.js"]
     }
   ],
