--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-    "name": "dom-mapper",
-    "version": "0.1.0",
-    "description": "A Chrome extension bundle for DOM mapping.",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "build:watch": "NODE_ENV=development vite build --watch ",
-        "lint": "eslint . --ext .ts,.tsx"
-    },
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^8.37.0",
-        "@typescript-eslint/parser": "^8.37.0",
-        "@vitejs/plugin-react": "^4.6.0",
-        "eslint": "^8.0.0",
-        "eslint-plugin-react": "^7.37.5",
-        "hot-reload-extension-vite": "^1.0.13",
-        "typescript": "^5.8.3",
-        "vite": "^4.5.14"
-    },
-    "dependencies": {
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0"
-    }
+  "name": "dom-mapper",
+  "version": "0.1.0",
+  "description": "A Chrome extension bundle for DOM mapping.",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "build:watch": "NODE_ENV=development vite build --watch",
+    "lint": "eslint . --ext .ts"
+  },
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^24.0.15",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^8.0.0",
+    "hot-reload-extension-vite": "^1.0.13",
+    "typescript": "^5.8.3",
+    "vite": "^4.5.14"
+  }
 }
