Init basic communication from dev tools > background > content script. And return the response to dev tools

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,5 +20,6 @@
       "js": ["content.js"]
     }
   ],
-  "permissions": ["scripting", "activeTab"]
+  "devtools_page": "devtools.html",
+  "permissions": ["scripting", "activeTab", "tabs"]
 }
