--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,10 +6,16 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
+      "16": "dommapper16.png",
+      "48": "dommapper48.png",
+      "128": "dommapper128.png"
     }
+  },
+  "icons": {
+    "16": "dommapper16.png",
+    "32": "dommapper32.png",
+    "48": "dommapper48.png",
+    "128": "dommapper128.png"
   },
   "background": {
     "service_worker": "background.js"
